# hallucination-lens

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  batch-input.json  starter_dataset.json
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  TESTING.md  THRESHOLD_CALIBRATION.md  WEEK11_MEASURED_OUTCOMES.md
examples/: README.md  api_client.py  score_batch.py  score_single.py
scripts/: benchmark_runtime.py
src/hallucination_lens/: __init__.py  __main__.py  api.py  cli.py  config.py  rate_limit.py  scorer.py  validators.py
tests/: test_api.py  test_cli.py  test_scorer.py
