
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-lens"
version = "0.2.0"
description = "Context-grounded hallucination detection for RAG responses"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ram Prakash" }
]
license = "MIT"
dependencies = [
  "sentence-transformers==5.4.1",
  "torch==2.3.1",
  "numpy==1.26.4",
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "prometheus-client==0.23.1",
  "pydantic==2.11.7"
]

[project.scripts]
hallucination-lens = "hallucination_lens.cli:main"
hallucination-lens-api = "hallucination_lens.api:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
